# renkon-back

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/database/: crud.py  database.py  models.py
app/routers/: contact.py  person.py  room.py
app/schemas/: schema.py  schemas.py
app/test/: test_main.py
mysql/init/: 01-databases.sql
